log
Wed, Mar 19, 2025 11:29:31 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025 11:35:16 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
204486d
Wed, Mar 19, 2025 11:38:27 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9d8ddf2
Wed, Mar 19, 2025 11:41:05 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|2
total_score: 40/70
b5cde6d
Wed, Mar 19, 2025 11:47:29 AM: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  4|1
total_score: 50/70
795c9d0
Wed, Mar 19, 2025 12:06:14 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:125:19: error: passing argument 1 of 'strcmp' makes pointer from integer without a cast [-Werror=int-conversion]
       if (!strcmp(cadena[i], cadena[k-1])) return 0 ;
                   ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
In file included from test.c:5:0:
exercises.c:125:30: error: passing argument 2 of 'strcmp' makes pointer from integer without a cast [-Werror=int-conversion]
       if (!strcmp(cadena[i], cadena[k-1])) return 0 ;
                              ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ac18f99
Wed, Mar 19, 2025 12:07:27 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
18b87a1
